chore: Turn on auto-update

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Scrape
 
 on:
   push:
-  #schedule:
-    #- cron: "*/7 * * * *"
+  schedule:
+    - cron: "*/45 * * * *"
   workflow_dispatch:
 
 jobs:
